<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_task2" Id="{dbaa17f9-c89f-4f3d-985d-169f8c0a7dce}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stTimer			: ST_Timer2;
	stTimer2		: ST_Timer2:=(tTimer2:=T#5S);
	rMotor1Pos		: REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>