<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Timer2" Id="{ca4f45bb-1e69-4756-82ed-0dfe895085ec}">
    <Declaration><![CDATA[TYPE ST_Timer2 :
STRUCT
	bTimerStart2	: BOOL;
	tTimer2			: TIME;
	bQStatus2	  	: BOOL;
	tElapsedTime2	: TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>